<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Triage System</string>
    <string name="triage_mode">Triage Modus</string>
	<string name="salvage_mode">Bergungs Modus</string>
    <string name="therapy_mode">Behandlungs Modus</string>
    <string name="walk">Gehfähigkeit</string>
    <string name="respiration">Respiration</string>
    <string name="perfusion">Perfusion</string>
    <string name="mental">Mentaler Status</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="stable">Stabil</string>
    <string name="critical">Kritisch</string>
    <string name="error">FEHLER</string>
    <string name="save">Speichern</string>
    <string name="change">Ändern</string>
    <string name="error_category_missing">Der Patient wurde noch nicht eingestuft!</string>
    <string name="salvageinfo">Bergeinformation</string>
    <string name="question_restart">Wollen Sie die gerade eingegebenen Daten wirklich zurücksetzen?</string>
    <string name="insert_info">Info einfügen</string>
    <string name="error_ok">OK</string>
    <string name="add">Hinzufügen</string>
    <string name="no_info">keine Information</string>
    <string name="scan_new_tag">neuen Triage-Tag einscannen</string>
    <string name="change_mode">Modus ändern</string>
    <string name="area_1">Behandlungsplatz I</string>
    <string name="area_2">Behandlungsplatz II</string>
    <string name="area_3">Behandlungsplatz III</string>
    <string name="area_4">Behandlungsplatz IV</string>

</resources>