<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="230dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1" >

            <Button
                android:id="@+id/buttonTriageMode"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="0"
                android:text="@string/triage_mode" />

            <Button
                android:id="@+id/buttonSalvageMode"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_row="0"
                android:text="@string/salvage_mode" />

            <Button
                android:id="@+id/buttonTherapyMode"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_row="0"
                android:text="@string/therapy_mode" />

        </GridLayout>

    </FrameLayout>

</GridLayout>